# maple

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/maple/: Application.hpp  Maple.hpp
engine/include/maple/events/: ActivationEvent.hpp  CharEvent.hpp  ContentScaleEvent.hpp  DoubleClickEvent.hpp  Event.hpp  Events.hpp  FileDropEvent.hpp  FocusEvent.hpp  InteractEvent.hpp  InteractStateEvent.hpp  KeyEvent.hpp  MouseEnterEvent.hpp  MouseEvent.hpp  MouseHoverEvent.hpp  MouseLeaveEvent.hpp  MouseMoveEvent.hpp  MoveEvent.hpp  ResizeEvent.hpp  ScrollEvent.hpp  WindowCloseEvent.hpp  WindowDestroyEvent.hpp  WindowStateEvent.hpp
engine/include/maple/widgets/: Widget.hpp  Window.hpp
engine/src/: Application.cpp
engine/src/events/: ActivationEvent.cpp  CharEvent.cpp  ContentScaleEvent.cpp  DoubleClickEvent.cpp  Event.cpp  FileDropEvent.cpp  FocusEvent.cpp  InteractStateEvent.cpp  KeyEvent.cpp  MouseEvent.cpp  MouseHoverEvent.cpp  MouseMoveEvent.cpp  MoveEvent.cpp  ResizeEvent.cpp  ScrollEvent.cpp  WindowStateEvent.cpp
engine/src/widgets/: Widget.cpp  Window.cpp
examples/: CMakeLists.txt
examples/syrup/: CMakeLists.txt  main.cpp
math/: CMakeLists.txt
math/include/maple/: vec2.hpp
